--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>groupId</groupId>
-    <artifactId>java</artifactId>
+    <artifactId>APOpdracht</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     
